--- a/Animal Crossing/index.html
+++ b/Animal Crossing/index.html
@@ -12,7 +12,7 @@
             EJS_gameName = "Animal Crossing: Wild World";
             EJS_color = "#0064ff";
             EJS_pathtodata = "https://cdn.jsdelivr.net/gh/EmulatorJS/EmulatorJS@latest/data/";
-            EJS_gameUrl = "Animal Crossing/Animal Crossing - Wild World (USA) (Rev 1).zip";
+            EJS_gameUrl = "Animal Crossing - Wild World (USA) (Rev 1).zip";
             EJS_biosUrl = "firmware.bin";
         </script>
         <script src="https://cdn.jsdelivr.net/gh/EmulatorJS/EmulatorJS@latest/data/loader.js"></script>
